More responsive styling additions. Issue: not centered

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
 .body-style {
   background-color: rgb(250, 202, 202);
 }
+
+#drum-machine {
+  padding: 1em;
+}
