--- a/src/DrumPad.css
+++ b/src/DrumPad.css
@@ -6,7 +6,7 @@
 }
 
 .grid-pad {
-  margin: .75em .75em;
+  margin: .75em 1.25em;
 }
 
 .drum-pad {
